--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ body {
   background: #272727;
   color: #fff;
   height: 100vh;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Public Sans', sans-serif;
   line-height: 1;
 }
 
